    o  trappingtransect, trappingtransectX revert to built-in integration
    o  some minor functions restricted to point detectors (i.e. not area search)
       CVa, CVpdot, reparameterize.esa, make.mask(type=pdot)
    o  derivedSystematic() defunct
    o  purged unused code
    o  derived() uses nlme::fdHess for gradients
    o  esa(), fxTotal(), MCgof() become S3 generic
    
Changes in version 4.6.10 (2024-08-21)

New features or changed behaviour of old functions
    o  sim.detect() optionally computes expected counts or retains null histories

Other
    o  list.secr.fit() recovers when some fits fail
    o  added dots argument to secr.test(), passed to statfn
    o  added dots argument to sim.secr(), passed to extractfn
    o  secr.test() fit = TRUE trim keeps mask
    o  internal changes to sim.detect() may change output order
    o  include pmix in output of detectpar() from mixture models
    o  as.array method for capthist objects

Bugs fixed
    o   code for deviance of binomial model failed (broken for years)

Changes in version 4.6.9 (2024-06-29)

New features or changed behaviour of old functions
    o  none

Other
    o  added package anchor in Rd files when linking to sf and RcppParallel functions, to satisfy CRAN
    
Changes in version 4.6.8 (2024-06-28)

New features or changed behaviour of old functions
    o  none
    
Bugs fixed
    o   bug in likelihood for 'relativeD'

Changes in version 4.6.7 (2024-06-05)

New features or changed behaviour of old functions
    o  sim.popn() the covariates argument may specify a function to 
       construct covariates 
    o  sim.capthist() detectpar = list(individual = TRUE) uses individual 
       parameter values from popn covariates
    o  rlnormCV() is wrapper for rlnorm with inputs on the natural scale
    o  make.spcosa() new function for spatial coverage designs (Walvoort et al. 2010)
    o  append.capthist() new function to combine independent capthist

Bugs fixed